--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,1 +1,23 @@
- 
+{{- /* Comments area start */ -}}
+{{- if site.Params.comments }}
+<div class="comments">
+    <div class="giscus"></div>
+    <script src="https://giscus.app/client.js"
+    data-repo="Wei-Sheng-Wang/wei-sheng-wang.github.io"
+    data-repo-id="R_kgDONmZqOQ"
+    data-category="Announcements"
+    data-category-id="DIC_kwDONmZqOc4Cl3HQ"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="preferred_color_scheme"
+    data-lang="en"
+    data-loading="lazy"
+    crossorigin="anonymous"
+    async>
+</script>
+</div>
+{{- end }}
+{{- /* Comments area end */ -}}
